# hl7-ed-analytics-platform

./: HospitalOperationsSimulator.md  Org_Repo.md  PoissonDistribution.md  README.md  Setup.md  pyproject.toml
ed-ehr-simulator/: main.py
ed-ehr-simulator/ed_simulator/core/: bed_manager.py  clock.py  event_queue.py  provider_manager.py  simulator.py
ed-ehr-simulator/ed_simulator/domain/: encounter.py  event.py  patient.py
ed-ehr-simulator/ed_simulator/generators/: arrival_generator.py  encounter_factory.py  journey_engine.py  patient_factory.py
output/: 0e079c9a-88b7-4441-9921-656003639872.hl7
services/ehr-simulator/output/: 001_ADT_A01.hl7  002_ADT_A08.hl7  003_ADT_A08.hl7  004_ADT_A08.hl7  005_ADT_A08.hl7  006_ADT_A03.hl7
src_v1/common/: models.py
src_v1/services/ehr-simulator/: main.py
src_v1/services/ehr-simulator/app/: encounter_factory.py  hl7_builder.py  hl7_writer.py  patient_factory.py
src_v1/services/ehr-simulator/scenarios/: trauma_alert.yaml
src_v1/services/ehr-simulator/templates/: adt_a01.j2
src_v2/common/models/: arrival.py  bed.py  clinical.py  disposition.py  encounter.py  event.py  facility.py  patient.py  provider.py  triage.py
src_v2/services/ehr-simulator/: main.py
src_v2/services/ehr-simulator/app/: encounter_factory.py  hl7_builder.py  hl7_writer.py  patient_factory.py  timeline_engine.py
src_v3/services/ehr-simulator/app/: arrival_generator.py  event_queue.py  journey_generator.py  simulation_clock.py
